# ExpenseTracker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  requirements.txt
.github/workflows/: main.yml  test.yml
ExpenseTracker/: __init__.py
ExpenseTracker/auth/: auth.py  service.py
ExpenseTracker/config/: client_secret.json.template  gcp.md  ledger.json.template  stylesheet.qss
ExpenseTracker/core/: __init__.py  auth.py  database.py  service.py  sync.py
ExpenseTracker/data/: __init__.py  data.py  model.py  proxy.py  view.py
ExpenseTracker/data/model/: __init__.py  expense.py  transaction.py  transactiondetails.py
ExpenseTracker/data/view/: __init__.py  doughnut.py  expense.py  piechart.py  transaction.py  transactiondetails.py  transactionpreview.py  trends.py
ExpenseTracker/database/: database.py
ExpenseTracker/log/: __init__.py  log.py  model.py  view.py
ExpenseTracker/settings/: __init__.py  category_editor.py  data_mapping_editor.py  editor.py  gcp.md  header_editor.py  lib.py  locale.py  model.py  settings.py  test_lib.py  view.py
ExpenseTracker/settings/editors/: __init__.py  category_editor.py  client_editor.py  data_mapping_editor.py  header_editor.py  json_widget.py  metadata_editor.py  spreadsheet_editor.py  views.py
ExpenseTracker/settings/presets/: __init__.py  lib.py  model.py  test_lib.py  ui.py  view.py
ExpenseTracker/status/: __init__.py  status.py
ExpenseTracker/tests/: test_database.py
ExpenseTracker/ui/: __init__.py  actions.py  app.py  basechart.py  dockable_widget.py  main.py  palette.py  signals.py  toolbar.py  ui.py  yearmonth.py
app/: CMakeLists.txt  build.ps1  vcpkg.json
app/cmake/: __install_python_deps.cmake  install_module.cmake.in  install_python_dist.cmake.in  install_requirements.cmake.in  installer.cmake  vcpkg-bootstrap.cmake
app/include/: dist.h
app/installer/: gpl-3.0.rtf  product.wxs.in
app/legal/: TERMS_OF_SERVICE
app/src/: PythonInterpreter.cpp  PythonLauncher.cpp  dist.cpp
docs/: requirements.txt
docs/rsc/icon/: icon.psd
docs/source/: conf.py  index.rst
docs/source/api/: core.rst  data.rst  index.rst  log.rst  modules.rst  overview.rst  settings.rst  ui.rst
docs/source/user_guide/: configuration.rst  getting_started.rst  index.rst  installation.rst  usage.rst
legal/: PRIVACY_POLICY
tests/: base.py  test_auth.py  test_database.py  test_log.py  test_presets.py  test_service.py  test_settings.py  test_sync.py  test_ui.py
